--- a/metainfo.yaml
+++ b/metainfo.yaml
@@ -9,7 +9,7 @@ deprecated: false
 release: false
 libraries:
  - qmake: MailCommon
-   cmake: "KF5::MailCommon"
-cmakename: KF5MailCommon
+   cmake: "KPim6::MailCommon"
+cmakename: KPim6MailCommon
 group: kdepim
 public_lib: true
