--- a/src/designer/CMakeLists.txt
+++ b/src/designer/CMakeLists.txt
@@ -14,9 +14,9 @@ ecm_add_qtdesignerplugin(mailcommonwidgets
     WIDGETS
     MailCommon::SearchPatternEdit
     LINK_LIBRARIES
-    KPim${KF_MAJOR_VERSION}::MailCommon
-    KPim${KF_MAJOR_VERSION}::Libkdepim
-    KF${KF_MAJOR_VERSION}::I18n
+    KPim6::MailCommon
+    KPim6::Libkdepim
+    KF6::I18n
     INSTALL_DESTINATION "${KDE_INSTALL_QTPLUGINDIR}/designer"
     COMPONENT Devel
     )
