--- a/src/filter/tests/CMakeLists.txt
+++ b/src/filter/tests/CMakeLists.txt
@@ -5,8 +5,8 @@ ecm_mark_as_test(filterimporterexportergui)
 target_link_libraries(filterimporterexportergui
   Qt::Core
   Qt::Gui
-  KPim${KF_MAJOR_VERSION}::MailCommon
-  KF${KF_MAJOR_VERSION}::I18n
+  KPim6::MailCommon
+  KF6::I18n
 )
 
 add_executable(invalidfilterdialoggui invalidfilterdialoggui.cpp)
@@ -14,8 +14,8 @@ ecm_mark_as_test(invalidfilterdialoggui)
 target_link_libraries(invalidfilterdialoggui
   Qt::Core
   Qt::Gui
-  KPim${KF_MAJOR_VERSION}::MailCommon
-  KF${KF_MAJOR_VERSION}::I18n
+  KPim6::MailCommon
+  KF6::I18n
 )
 
 add_executable(kmfilterdialogtestgui kmfilterdialogtestgui.cpp ../../../autotests/dummykernel.cpp kmfilterdialogtestgui.h)
@@ -23,8 +23,8 @@ ecm_mark_as_test(kmfilterdialogtestgui)
 target_link_libraries(kmfilterdialogtestgui
   Qt::Core
   Qt::Gui
-  KPim${KF_MAJOR_VERSION}::MailCommon
-  KF${KF_MAJOR_VERSION}::I18n
+  KPim6::MailCommon
+  KF6::I18n
 )
 
 add_executable(filteractionmissingsoundurldialogui filteractionmissingsoundurldialogui.cpp ../../../autotests/dummykernel.cpp ../dialog/filteractionmissingsoundurldialog.cpp)
@@ -32,9 +32,9 @@ ecm_mark_as_test(filteractionmissingsoundurldialogui)
 target_link_libraries(filteractionmissingsoundurldialogui
   Qt::Core
   Qt::Gui
-  KPim${KF_MAJOR_VERSION}::MailCommon
-  KF${KF_MAJOR_VERSION}::I18n
-  KF${KF_MAJOR_VERSION}::KIOWidgets
+  KPim6::MailCommon
+  KF6::I18n
+  KF6::KIOWidgets
 )
 
 add_executable(filteractionmissingtemplatedialoggui filteractionmissingtemplatedialoggui.cpp ../../../autotests/dummykernel.cpp ../dialog/filteractionmissingtemplatedialog.cpp)
@@ -42,9 +42,9 @@ ecm_mark_as_test(filteractionmissingtemplatedialoggui)
 target_link_libraries(filteractionmissingtemplatedialoggui
   Qt::Core
   Qt::Gui
-  KPim${KF_MAJOR_VERSION}::MailCommon
-  KF${KF_MAJOR_VERSION}::I18n
-  KF${KF_MAJOR_VERSION}::Completion
+  KPim6::MailCommon
+  KF6::I18n
+  KF6::Completion
 )
 
 add_executable(filteractionmissingtransportdialoggui filteractionmissingtransportdialoggui.cpp ../../../autotests/dummykernel.cpp ../dialog/filteractionmissingtransportdialog.cpp)
@@ -52,10 +52,10 @@ ecm_mark_as_test(filteractionmissingtransportdialoggui)
 target_link_libraries(filteractionmissingtransportdialoggui
   Qt::Core
   Qt::Gui
-  KPim${KF_MAJOR_VERSION}::MailCommon
-  KF${KF_MAJOR_VERSION}::I18n
-  KF${KF_MAJOR_VERSION}::Completion
-  KPim${KF_MAJOR_VERSION}::MailTransport
+  KPim6::MailCommon
+  KF6::I18n
+  KF6::Completion
+  KPim6::MailTransport
 )
 
 add_executable(filteractionmissingaccountdialoggui filteractionmissingaccountdialoggui.cpp ../../../autotests/dummykernel.cpp  ../dialog/filteractionmissingaccountdialog.cpp)
@@ -63,9 +63,9 @@ ecm_mark_as_test(filteractionmissingaccountdialoggui)
 target_link_libraries(filteractionmissingaccountdialoggui
   Qt::Core
   Qt::Gui
-  KPim${KF_MAJOR_VERSION}::MailCommon
-  KF${KF_MAJOR_VERSION}::I18n
-  KF${KF_MAJOR_VERSION}::Completion
+  KPim6::MailCommon
+  KF6::I18n
+  KF6::Completion
 )
 
 add_executable(filteractionmissingtagdialoggui filteractionmissingtagdialoggui.cpp ../../../autotests/dummykernel.cpp ../dialog/filteractionmissingtagdialog.cpp)
@@ -73,9 +73,9 @@ ecm_mark_as_test(filteractionmissingtagdialoggui)
 target_link_libraries(filteractionmissingtagdialoggui
   Qt::Core
   Qt::Gui
-  KPim${KF_MAJOR_VERSION}::MailCommon
-  KF${KF_MAJOR_VERSION}::I18n
-  KF${KF_MAJOR_VERSION}::Completion
+  KPim6::MailCommon
+  KF6::I18n
+  KF6::Completion
 )
 
 add_executable(filteractionmissingidentitydialoggui filteractionmissingidentitydialoggui.cpp ../../../autotests/dummykernel.cpp ../dialog/filteractionmissingidentitydialog.cpp)
@@ -83,7 +83,7 @@ ecm_mark_as_test(filteractionmissingidentitydialoggui)
 target_link_libraries(filteractionmissingidentitydialoggui
   Qt::Core
   Qt::Gui
-  KPim${KF_MAJOR_VERSION}::MailCommon
-  KF${KF_MAJOR_VERSION}::I18n
-  KF${KF_MAJOR_VERSION}::Completion
+  KPim6::MailCommon
+  KF6::I18n
+  KF6::Completion
 )
