--- a/KPimMailCommonConfig.cmake.in
+++ b/KPimMailCommonConfig.cmake.in
@@ -1,21 +1,11 @@
 @PACKAGE_INIT@
 include(CMakeFindDependencyMacro)
-find_dependency(KPim@KF_MAJOR_VERSION@Akonadi "@AKONADI_VERSION@")
-find_dependency(KPim@KF_MAJOR_VERSION@AkonadiMime "@AKONADIMIME_LIB_VERSION@")
-find_dependency(KPim@KF_MAJOR_VERSION@Libkdepim "@LIBKDEPIM_LIB_VERSION@")
-find_dependency(KPim@KF_MAJOR_VERSION@MessageComposer "@MESSAGELIB_LIB_VERSION@")
-find_dependency(KPim@KF_MAJOR_VERSION@PimCommon "@PIMCOMMON_LIB_VERSION@")
-find_dependency(KPim@KF_MAJOR_VERSION@PimCommonAkonadi "@PIMCOMMON_LIB_VERSION@")
-find_dependency(KF@KF_MAJOR_VERSION@Completion "@KF_MIN_VERSION@")
-
-if (@MAILCOMMON_KF5_COMPAT@)
-    message(WARNING "\n"
-                    "************* DEPRECATION WARNING *************\n"
-		    "Using find_package(KF5MailCommon) and KF5::MailCommon targets is deprecated. "
-		    "Please use find_package(KPim@KF_MAJOR_VERSION@MailCommon) and KPim@KF_MAJOR_VERSION@::MailCommon instead. This backwards "
-                    "compatibility will be removed in the next major version.\n"
-                    "***********************************************\n")
-endif()
-
-include("${CMAKE_CURRENT_LIST_DIR}/KPim@KF_MAJOR_VERSION@MailCommonTargets.cmake")
+find_dependency(KPim6Akonadi "@AKONADI_VERSION@")
+find_dependency(KPim6AkonadiMime "@AKONADIMIME_LIB_VERSION@")
+find_dependency(KPim6Libkdepim "@LIBKDEPIM_LIB_VERSION@")
+find_dependency(KPim6MessageComposer "@MESSAGELIB_LIB_VERSION@")
+find_dependency(KPim6PimCommon "@PIMCOMMON_LIB_VERSION@")
+find_dependency(KPim6PimCommonAkonadi "@PIMCOMMON_LIB_VERSION@")
+find_dependency(KF6Completion "@KF_MIN_VERSION@")
+include("${CMAKE_CURRENT_LIST_DIR}/KPim6MailCommonTargets.cmake")
 @PACKAGE_INCLUDE_QCHTARGETS@
