--- a/metainfo.yaml
+++ b/metainfo.yaml
@@ -3,7 +3,9 @@ description: MailCommon Library
 tier: 3
 type: functional
 platforms:
-    - name: All
+    - name: Linux
+    - name: FreeBSD
+    - name: macOS
 portingAid: false
 deprecated: false
 release: false
