Adapt to KIconThemes changes
KIconButton is in a new library now

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -362,6 +362,7 @@ PRIVATE
   KF6::XmlGui
   KF6::KIOWidgets
   KF6::IconThemes
+  KF6::IconWidgets
   KF6::Archive
   KF6::ItemViews
   KF6::SyntaxHighlighting
