Adapt to new akonadicontact api

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -35,7 +35,7 @@ add_feature_info(QCH ${BUILD_QCH} "API documentation in QCH format (for e.g. Qt 
 
 set(MAILCOMMON_LIB_VERSION ${PIM_VERSION})
 set(AKONADIMIME_LIB_VERSION "5.240.40")
-set(AKONADICONTACT_LIB_VERSION "5.240.41")
+set(AKONADICONTACT_LIB_VERSION "5.240.43")
 set(MESSAGELIB_LIB_VERSION "5.240.40")
 set(KMIME_LIB_VERSION "5.240.40")
 set(KMAILTRANSPORT_LIB_VERSION "5.240.40")
@@ -82,7 +82,7 @@ find_package(KPim6Mime ${KMIME_LIB_VERSION} CONFIG REQUIRED)
 find_package(KPim6PimCommonAkonadi ${PIMCOMMON_LIB_VERSION} CONFIG REQUIRED)
 find_package(KPim6TemplateParser ${MESSAGELIB_LIB_VERSION} CONFIG REQUIRED)
 find_package(Phonon4Qt6 ${PHONON_LIB_VERSION} CONFIG REQUIRED)
-find_package(KPim6ContactEditor ${AKONADICONTACT_LIB_VERSION} CONFIG REQUIRED)
+find_package(KPim6AkonadiContactWidgets ${AKONADICONTACT_LIB_VERSION} CONFIG REQUIRED)
 find_package(KPim6IdentityManagementCore ${KMIME_LIB_VERSION} CONFIG REQUIRED)
 
 option(BUILD_DESIGNERPLUGIN "Build plugin for Qt Designer" ON)
