--- a/src/filter/autotests/CMakeLists.txt
+++ b/src/filter/autotests/CMakeLists.txt
@@ -3,7 +3,7 @@
 set(mailcommon_filter_test_LIBS Qt::Test Qt::Gui KPim6::AkonadiCore KPim6::AkonadiMime
                                 KPim6::MailCommon KPim6::PimCommon Phonon::phonon4qt6
                                 KF6::KIOWidgets KF6::IconThemes KPim6::TemplateParser
-                                KPim6::ContactEditor
+				KPim6::AkonadiContactWidgets
                                 KPim6::MailTransport KF6::I18n KF6::SyntaxHighlighting KF6::Codecs
 )
 
