--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -7,11 +7,11 @@ Dependencies:
     'frameworks/extra-cmake-modules': '@latest-kf6'
     'frameworks/kcodecs': '@latest-kf6'
     'frameworks/karchive': '@latest-kf6'
-    'pim/akonadi' : '@latest-kf6'
-    'pim/akonadi-mime' : '@latest-kf6'
-    'pim/kmailtransport' : '@latest-kf6'
-    'pim/kmime' : '@latest-kf6'
-    'pim/libkdepim' : '@latest-kf6'
-    'pim/mailimporter' : '@latest-kf6'
-    'pim/messagelib' : '@latest-kf6'
-    'pim/pimcommon' : '@latest-kf6'
+    'pim/akonadi' : '@same'
+    'pim/akonadi-mime' : '@same'
+    'pim/kmailtransport' : '@same'
+    'pim/kmime' : '@same'
+    'pim/libkdepim' : '@same'
+    'pim/mailimporter' : '@same'
+    'pim/messagelib' : '@same'
+    'pim/pimcommon' : '@same'
