pri is not created now

--- a/metainfo.yaml
+++ b/metainfo.yaml
@@ -10,8 +10,7 @@ portingAid: false
 deprecated: false
 release: false
 libraries:
- - qmake: MailCommon
-   cmake: "KPim6::MailCommon"
+ - cmake: "KPim6::MailCommon"
 cmakename: KPim6MailCommon
 group: kdepim
 public_lib: true
