Rename as MAILCOMMON_HAVE_ACTIVITY_SUPPORT

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -114,7 +114,7 @@ if(TARGET KPim6::PimCommonActivities)
         endif()
 
         if(TARGET Plasma::Activities)
-            set(HAVE_ACTIVITY_SUPPORT TRUE)
+            set(MAILCOMMON_HAVE_ACTIVITY_SUPPORT TRUE)
         endif()
     endif()
 endif()
