--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -15,3 +15,4 @@ Dependencies:
     'pim/mailimporter' : '@same'
     'pim/messagelib' : '@same'
     'pim/pimcommon' : '@same'
+    'libraries/phonon' : '@stable'
