We need phonon here

--- a/.kde-ci.yml
+++ b/.kde-ci.yml
@@ -15,6 +15,7 @@ Dependencies:
     'pim/mailimporter' : '@same'
     'pim/messagelib' : '@same'
     'pim/pimcommon' : '@same'
+    'libraries/phonon' : '@stable'
 
 - 'on': ['Linux', 'FreeBSD']
   'require':
